--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=upload
+logging.level.org.apache.coyote.http11=trace
+#spring.servlet.multipart.enabled=false
+file.dir=C:/Users/suyou/OneDrive/Desktop/Programming/JAVA Spring/mvc-2/file/
